Make disabled tab links navigable to by keyboard

--- a/views/pulsar/v2/helpers/tabs.html.twig
+++ b/views/pulsar/v2/helpers/tabs.html.twig
@@ -29,9 +29,9 @@
             {% set options = ({}) %}
             <li class="nav-inline__item{% if tab_active is defined and tab_active == tab.id %} nav-inline__item--is-active is-active{% endif %}{% if tab.hidden is defined and tab.hidden == true %} hide{% endif %}">
                 {% if tab.disabled is defined and tab.disabled == true %}
-                    {% set href = null %}
+                    {% set href = '#' ~ tab.id %}
                     {% set type = 'link' %}
-                    {% set tabindex = '-1' %}
+                    {% set tabindex = '0' %}
                     {% set options = options|merge({ 'aria-disabled': 'true' }) %}
                 {% else %}
                     {% set href = '#' ~ tab.id %}
