Remove explicit tabindex, we don’t need it anymore

--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -68,7 +68,8 @@
         {
           "id"    : "block-list",
           "label" : "Block List",
-          "src"   : tab_block_list
+          "src"   : tab_block_list,
+          'disabled': true
         },
         {
           "id"    : "cards",
