Remove debug code

--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -68,8 +68,7 @@
         {
           "id"    : "block-list",
           "label" : "Block List",
-          "src"   : tab_block_list,
-          'disabled': true
+          "src"   : tab_block_list
         },
         {
           "id"    : "cards",
