Add Progress List and Tidy Styles of the 5th Test

--- a/views/playground/workflow-comments/test-05/index.html.twig
+++ b/views/playground/workflow-comments/test-05/index.html.twig
@@ -20,18 +20,18 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--current">
+        <a href="#" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 2</span>
-                Submitted
+                Submission
             </span>
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item">
+        <a href="#" class="progress-list__item progress-list__item--current">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 3</span>
-                Approved
+                Approval
             </span>
             <span class="progress-list__arrow">&gt;</span>
         </a>
