--- a/views/playground/workflow-comments/test-05/tab_one.html.twig
+++ b/views/playground/workflow-comments/test-05/tab_one.html.twig
@@ -91,7 +91,7 @@
     {% endif %}
     {{
         html.panel({
-            'title': 'Content awaiting approval',
+            'title': 'Content Awaiting Approval',
             'body': '
             <div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
                 <div class="timeline-avatar timeline-avatar--user">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>',
-            'class': 'panel u-margin-top-none',
+            'class': 'panel with-timeline u-margin-top-none',
             'actions': [
                 {
                     'label': 'Approve',
