--- a/views/playground/workflow-comments/test-05/tab_reject.html.twig
+++ b/views/playground/workflow-comments/test-05/tab_reject.html.twig
@@ -94,9 +94,33 @@
 
     {{
         html.panel({
-            'title': '<strong>Admin McAdminface</strong> has rejected this content',
-            'body': note|default ~ '<p>No changes have been made since your rejection, this message will disappear when the author makes changes, or resubmits for approval</p>',
-            'icon': 'times-circle',
+            'title': 'Content Rejected',
+            'body': note|default ~ '
+            <div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
+                <div class="timeline-avatar timeline-avatar--user">
+                    <span>YZ</span>
+                </div>
+                <div class="timeline-content">
+                    <div class="timeline-content__inner">
+                        <h4 class="timeline-content__title">Yves Zelman
+
+                        </h4>
+
+                        <div class="timeline-content__date">
+                            <i data-toggle="tooltips" title="" aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help" data-original-title="29 Mar 2018, 11:59 AM"></i>
+                            <time class="u-visible-print-inline">29 Mar 2018, 11:59 AM</time>
+                            <time class="timeago u-hidden-print" datetime="Thu, 29 Mar 2018 11:59:04 +0100" data-timezone="Europe/London">Thursday 29th March 2018 (11:59)</time>
+                        </div>
+
+                        <div class="timeline-content__body" data-id="2650349">
+                            <p id="message-120530" class="timeline-content__text">
+                                Please, correct the spelling mistakes in this document before sending it again for approval. Thank you!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>',
+            'icon': 'close',
             'class': 'panel--danger u-margin-top-none'
         })
     }}
