--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -144,6 +144,7 @@ $fa-css-prefix: 'icon';
 @import 'component.tab-panel';
 @import 'component.tables';
 @import 'component.table-detail';
+@import 'component.timeline';
 @import 'component.timepicker';
 @import 'component.datatables';
 @import 'component.toggle-switch';
