--- a/views/playground/selectwoo/index.html.twig
+++ b/views/playground/selectwoo/index.html.twig
@@ -1,5 +1,7 @@
 {% extends '@pulsar/pulsar/layouts/base.html.twig' %}
 
+{% set heading = 'selectWoo test' %}
+
 {% block tabs_content %}
 {{
     form.create()
