--- a/views/playground/selectwoo/index.html.twig
+++ b/views/playground/selectwoo/index.html.twig
@@ -31,24 +31,14 @@
             },
             {
                 'label': 'Value three',
-                'value': 'value1'
-            },
-            {
-                'label': 'Value four',
-                'value': 'value2'
-            },
-            {
-                'label': 'Value five',
-                'value': 'value1'
-            },
-            {
-                'label': 'Value six',
-                'value': 'value2'
+                'value': 'value3'
             }
         ]
 
     })
 }}
+{% set i = i + 1 %}
+
 {{
     form.end({
         'actions': [
