--- a/views/playground/workflow-comments/test-01/index_two.html.twig
+++ b/views/playground/workflow-comments/test-01/index_two.html.twig
@@ -35,6 +35,12 @@
             "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
             "icon": "folder"
         },
+        "5": {
+            "label": "Test 05",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-05/index.html.twig",
+            "icon": "folder"
+        }
     }
 %}
 
