--- a/views/playground/workflow-comments/test-03/index_approve.html.twig
+++ b/views/playground/workflow-comments/test-03/index_approve.html.twig
@@ -12,19 +12,19 @@
 {%
     set nav_data = {
         "1": {
-            "label": "Test One",
+            "label": "Test 01",
             "class": "",
             "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
-            "label": "Test Two",
+            "label": "Test 02",
             "class": "",
             "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
-            "label": "Test Three",
+            "label": "Test 03",
             "class": "is-active",
             "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
@@ -33,6 +33,12 @@
             "label": "Test 04",
             "class": "",
             "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        },
+        "5": {
+            "label": "Test 05",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-05/index.html.twig",
             "icon": "folder"
         }
     }
