--- a/views/playground/workflow-comments/test-04/index_approve.html.twig
+++ b/views/playground/workflow-comments/test-04/index_approve.html.twig
@@ -34,6 +34,12 @@
             "class": "is-active",
             "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
             "icon": "folder"
+        },
+        "5": {
+            "label": "Test 05",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-05/index.html.twig",
+            "icon": "folder"
         }
     }
 %}
