--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -8,6 +8,7 @@ body {
 }
 
 body {
+  background-color: color(white);
   font-family: $font-family-base;
   font-size: $font-size-medium;
   line-height: $line-height-small;
