--- a/views/playground/workflow-comments/test-02/index_approve.html.twig
+++ b/views/playground/workflow-comments/test-02/index_approve.html.twig
@@ -7,7 +7,7 @@
 
 {% block title %}{{ parent() }}{% endblock %}
 
-{% set heading = "My Example Document (Admin\'s View)" %}
+{% set heading = "My Example Document" %}
 
 {%
     set nav_data = {
