--- a/views/playground/workflow-comments/test-05/index_reject.html.twig
+++ b/views/playground/workflow-comments/test-05/index_reject.html.twig
@@ -7,7 +7,7 @@
 
 {% block title %}{{ parent() }}{% endblock %}
 
-{% set heading = "My Example Document (Admin\'s View)" %}
+{% set heading = "My Example Document" %}
 
 {% block progresslist %}
     <div class="progress-list progress-list-mini">
