--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -5,7 +5,7 @@
 
 <nav class="nav-main" aria-label="Primary" id="aria-main-nav">
     <div class="nav-primary t-nav-primary">
-        <a href="{{ options.brand_link|default('#') }}" class="jadu-branding">
+        <a href="{{ options.brand_link|default('#') }}" class="jadu-branding" aria-label="Home">
             <span class="jadu-logomark"></span>
             <span class="jadu-wordmark">Jadu</span>
         </a>
