Remove `href` from close button links

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -22,7 +22,7 @@
 
     <div class="nav-secondary t-nav-secondary" id="aria-secondary-nav">
 
-        <a href="#close" class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</a>
+        <a class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</a>
 
         {% if options.data is iterable %}
             {% for options in options.data %}
