--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -47,27 +47,26 @@
 // scss-lint:enable SelectorFormat
 
 a.dt-button {
-    border-right: 1px solid color(border);
+    border-right: 1px dotted color(border);
     margin-right: $margin-base-vertical;
     padding-right: $margin-base-vertical;
 }
 
-.dt-buttons > a,
-.dt-buttons > button {
+.dt-buttons {
     float: left;
-    margin-top: $margin-large-vertical;
-}
 
-.dt-buttons > button {
-    background-color: transparent;
-    border: 0;
-    border-right: 1px solid color(border);
-    color: color(jadu-blue, dark);
-    margin-right: $margin-base-vertical;
-    padding: 0 $padding-base-horizontal;
+    > button {
+        background-color: transparent;
+        border: 0;
+        border-right: 1px dotted color(border);
+        color: color(link);
+        float: left;
+        line-height: 30px;
+        padding: 0 $padding-base-horizontal;
 
-    &:hover {
-        color: color(jadu-blue, darkest);
+        &:hover {
+            color: color(link, hover);
+        }
     }
 }
 
@@ -79,25 +78,32 @@ a.dt-button {
         &.sorting_asc::after,
         &.sorting_desc::after {
             @include icon-FontAwesome();
-            font-size: 18px;
+            font-size: 16px;
             left: 0;
             margin-left: 10px;
         }
 
+        &.sorting::after {
+            content: '\f0dc';
+            color: color(text, light);
+        }
+
         &.sorting_asc::after {
-            content: $circle-arrow-up;
+            content: '\f0de';
         }
 
         &.sorting_desc::after {
-            content: $circle-arrow-down;
+            content: '\f0dd';
         }
 
         &.sorting_asc,
         &.sorting_desc {
-            background-color: darken(#fff, 10);
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+            background-color: color(background, dark);
         }
+    }
+
+    th [href] {
+        color: color(text);
     }
 
     td.sorting_1 {
@@ -155,7 +161,8 @@ th.sorting_disabled:hover {
 .dataTables_info {
     display: none;
     float: left;
-    margin-top: 11px;
+    line-height: 30px;
+    margin-left: 12px;
 
     @include respond-min($screen-tablet) {
         display: block;
@@ -164,7 +171,6 @@ th.sorting_disabled:hover {
 
 .dataTables_filter {
     float: right;
-    margin-top: 9px;
 
     [type="search"] {
         border: 1px solid color(border);
@@ -172,11 +178,17 @@ th.sorting_disabled:hover {
         border-radius: 4px;
         margin-left: 10px;
         padding: 5px;
+
+        &:focus {
+            border: 1px solid color(primary);
+            box-shadow: inset 0 0 0 1px color(primary);
+            outline: none;
+        }
     }
 }
 
 .dataTables_top {
-    color: color(text, light);
+    color: color(text);
     float: left;
     margin-bottom: 10px;
     width: 100%;
@@ -205,6 +217,7 @@ th.sorting_disabled:hover {
 
 .dataTables_bottom {
     display: block;
+    margin-top: -1px;
     width: 100%;
 }
 
