--- a/views/lexicon/tables/datatablex.html.twig
+++ b/views/lexicon/tables/datatablex.html.twig
@@ -1,19 +1,20 @@
 {% extends '@pulsar/pulsar/components/tab.html.twig' %}
 
 {% block tab_content %}
-    <table class="table datatable table--full table--horizontal">
+    <table class="table datatable table--full table--horizontal" data-order='[[ 3, "desc" ]]'>
         <thead>
             <tr>
                 <td class="table-responsive"></td>
                 <td class="table-selection"></td>
-                <th><a href="#">Name datatable</a></th>
-                <th><a href="#">IP</a></th>
-                <th><a href="#">Status</a></th>
-                <th><a href="#">Uptime</a></th>
-                <th><a href="#">Image</a></th>
-                <th><a href="#">RAM</a></th>
-                <th class="centered"><a href="#">CPUs</a></th>
-                <th><a href="#">Actions</a></th>
+                <th>Name</th>
+                <th>Created</th>
+                <th>IP</th>
+                <th>Status</th>
+                <th>Uptime</th>
+                <th>Image</th>
+                <th>RAM</th>
+                <th class="centered">CPUs</th>
+                <th data-orderable="false">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -25,7 +26,8 @@
                 <td class="table-selection">
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
-                <td><a href="#" class="table-link">Sysadmin - Ansible 1</a></td>
+                <td><a href="#link-{{ i }}" class="table-link">Sysadmin - Ansible 1</a></td>
+                <td>04/07/2018 12:34pm</td>
                 <td class="monospace"><a href="#" class="table-link">10.101.0.175</a></td>
                 <td>
                     {{
@@ -56,6 +58,7 @@
                     {{ html.icon('square-o', { 'class': 'table-row-select js-select' }) }}
                 </td>
                 <td><a href="#" class="table-link">Sysasdmin - WISP 1</a></td>
+                <td>04/07/2018 12:34pm</td>
                 <td class="monospace"><a href="#" class="table-link">10.101.0.138</a></td>
                 <td>
                     {{
