Fixes silly error making dropdown carets visible on all buttons

--- a/views/pulsar/v2/helpers/util.html.twig
+++ b/views/pulsar/v2/helpers/util.html.twig
@@ -9,7 +9,7 @@
 
 {% macro caret(visible) %}
 {% spaceless %}
-    {% if visible is defined and visible != true %}
+    {% if visible is defined and visible != false %}
         &nbsp;<span class="caret"></span>
     {% endif  %}
 {% endspaceless %}
