--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -297,6 +297,12 @@ div.no-results {
     text-align: justify !important;
 }
 
+%u-font-size-small,
+.u-font-size-small {
+    font-size: $font-size-small !important;
+}
+
+
 %u-ui-disabled,
 .u-ui-disabled.u-ui-disabled {
     @extend %u-cursor-not-allowed;
