--- a/views/lexicon/tables/datatable.html.twig
+++ b/views/lexicon/tables/datatable.html.twig
@@ -5,7 +5,9 @@
         <thead>
             <tr>
                 <td class="table-responsive"></td>
-                <td class="table-selection"></td>
+                <th class="table-selection">
+                    <input type="checkbox" class="form__control checkbox js-select-all" aria-label="Select all rows" />
+                </th>
                 <th><a href="#">Name</a></th>
                 <th><a href="#">Created</a></th>
                 <th><a href="#">IP</a></th>
@@ -24,7 +26,7 @@
                     {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
                 </td>
                 <td class="table-selection">
-                    {{ html.icon('unchecked', { 'class': 'table-row-select js-select' }) }}
+                    <input type="checkbox" class="form__control checkbox js-select" aria-label="Select row" />
                 </td>
                 <td><a href="#" class="table-link">Sysadmin - Ansible 1</a></td>
                 <td>04/07/2018 12:34pm</td>
@@ -55,7 +57,7 @@
                     {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
                 </td>
                 <td class="table__td table-selection">
-                    {{ html.icon('unchecked', { 'class': 'table-row-select js-select' }) }}
+                    <input type="checkbox" class="form__control checkbox js-select" aria-label="Select row" />
                 </td>
                 <td><a href="#" class="table-link">Sysasdmin - WISP 1</a></td>
                 <td>04/07/2018 12:34pm</td>
